@@ -43,6 +43,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.tencent.polaris.api.utils.RuleUtils.MATCH_ALL;
 
@@ -259,7 +260,7 @@ public class PolarisPicker extends SubchannelPicker {
 				}
 
 				return false;
-			}).toList();
+			}).collect(Collectors.toList());
 		}
 
 	}
